@@ -46,6 +46,7 @@
 	- there must be a { between two % in a query format (unless %% is used)
 
 2.5.6 -> 2.5.7:
+	- make '-' character illegal (again) in version/release.
 	- use portable #!/bin/sh (Tim Mooney).
 	- don't erase failing build script (Tim Mooney).
 	- use portable mkinstalldirs (Tim Mooney).
